k8s/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.k8s.szp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - argocd.k8s.szp.io
      secretName: argocd-ingress-http
